--- a/angular.json
+++ b/angular.json
@@ -22,12 +22,12 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "/node_modules/primeflex/primeflex.css"
+              "src/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles.css",
+               "node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           },
